feat(Backend): Program intake operation
